/*
--------------------------------
 Author: Deepak Rathod
--------------------------------
 Date - 17 July 2022
 Phone: +917020814070
 Email: rathoddeepak537@gmail.com 
--------------------------------
 --->   Logistics System   <---
--------------------------------
*/
syntax = "proto3";

package justify;

option go_package = "./proto;justify";

message Session {
	int64 id = 1;
	int64 user_id = 2;
	string client_data = 3;
	string session_key = 4;
	int64  created_at = 5;
}

message GetSessionByIdRequest {
	int64 session_id = 1;
}

message GetSessionRequest {
	string session_key = 1;
	int64 user_id = 2;
	int64 session_id = 3;
}

message GetSessionResponse {
	int64 session_id = 1;
	int64 user_id = 2;
	string session_key = 3;
}

message CreateSessionRequest {
	int64 user_id = 1;
	string client_data = 2;
}

message GetSessionsResponse {
	repeated Session sessions = 1;
}

service SessionService {
	rpc GetSessionById(GetSessionByIdRequest) returns (GetSessionResponse);
	rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
	rpc GetUserSession(GetSessionRequest) returns (GetSessionsResponse);
	rpc CreateSession(CreateSessionRequest) returns (GetSessionResponse);
}